# Anki_CardGen

./: .bumpversion.cfg  .codespell_dict.txt  .custom_pylintrc  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  .secrets.baseline  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  action.yaml  ankicardgen.ini  buildozer.spec  color_chooser.py  db.py  db.sqlite  entrypoint_pyinstaller.sh  main.py  main_old.py  main_testing.py  my_log.txt  picture_picker.kv  picture_picker.py  pyinstaller.spec  pyproject.toml  requirements.txt  run_and_unlock.sh  setup.py  tasks.py  utils.py  word_lists.json
.github/obsolete/: buildozer.yaml
.github/workflows/: buildozer.yaml  create_release.yml  pyinstaller-linux.yaml  pyinstaller-poetry.yml  pyinstaller-poetry_1.yml  pyinstaller-windows.yaml  test.yaml
.pre-commit/: README.md.jinja  dictionary.txt  render_readme.py  screenshots.py
.pre-commit/recordings/: 0-nav-drawer-open.kvi  1-word-0.kvi  2-word-1.kvi
.pre-commits/: render_readme.py  screenshots.py
.utils/: move_binary.py  render_readme.py  screenshots.py
.utils/recordings/: 3-word-images.kvi  4-import.kvi  5-export.kvi
acg/: __init__.py  ankicardgen.ini  cli.py  db.py  exporter.py  fields.py  generate_anki_card.py  importer.py  language_processing.py  main.py  parsers.py  paths.py  pyinstaller.spec  spacy_models.json  templates.py  unused_utils.py  utils.py
acg/anki/: meaning-pt_front.html  pt-meaning_front.html
acg/anki-templates/vocab_card_new/: meaning-pt_back.html  (+2 more)
acg/custom_widgets/: __init__.py  behaviors.py  custom_dropdown.py  custom_speed_dial.kv  custom_speed_dial.py  dialogs.kv  dialogs.py  fixes.kv  main_menu.kv  main_menu.py  scroll_widgets.kv  scroll_widgets.py  selection_widgets.kv  selection_widgets.py  settings.kv  settings.py
acg/design_patterns/: callback_chain.py  factory.py  utils.py
acg/exporter/: __init__.py  exporter.py
acg/google_images_download/: google_images_download.py  sample_config.json
acg/parsers/: __init__.py  base.py  google_image_parser.py  new_parsers.py
acg/screens/: __init__.py  history.kv  history.py  queue.kv  queue.py  queued.kv  queued.py  screen_dict.json  settings.kv  settings.py  single_word.kv  single_word.py
anki/: generate_anki_card.py  meaning-pt_back.html  meaning-pt_front.html  output.apkg  pt-meaning_front.html  word.css
anki/css/: pt.css
anki/js/: censor.js  modal.js
anki_scripts/: Query.py  Query_old.py  Untitled.ipynb  add_card.py  cloze  cloze.py  cloze_brakets.py  comecar.html  conjugation_table_clean.py  convert_kindle_html.py  dictionary_queries.py  install_python_packages  interacting_with_anki.py  linguee_query.py  my_audio_download  my_image_download  my_image_download_old  new.py  new_main.py  output.apkg  payload.json  source.txt  test.html  test.ipynb  yad_args.py
buildozer_stuff/: buildozer.spec
docs/: ACG.main.rst  ACG.my_kivy.rst  ACG.utils.rst  ACG.word_requests.rst  conf.py  custom_widgets.rst  db.rst  index.rst  main.rst  requirements.txt  ui.rst  utils.rst
docs/custom_widgets/: main_menu.rst  scroll_widgets.rst  selection_widget.rst
docs/screens/: history.rst  queued.rst  single_word.rst
docs/ui/: behaviors.rst  main_menu.rst  screen_queue.rst  screen_single_word.rst  scroll_list.rst
docs/word_processing/: anki.rst  parsers.rst  words.rst
docs_v3/: ACG.anki.rst  ACG.main.rst  ACG.utils.rst  index.rst
google_images_download/: __init__.py  __main__.py  google_images_download.py
kivy/: main_app.py  mychip.kv  mychip.py  picture_picker.kv  picture_picker.py  tabs.kv  tabs.py  user_input.kv  user_input.py
logging/: config.yaml  log.py
my_kivy/: file_manager.py  fixes.kv  import.py  kindle_import.py  mycard.kv  mycard.py  mychip.kv  mychip.py  mychooser.kv  mychooser.py  picture_picker.kv  picture_picker.py  screen_import.kv  screen_import.py  screen_kindle_import.kv  screen_preferences.kv  screen_queue.kv  screen_queue.py  screen_settings.kv  screen_single_word.kv  screen_single_word.py  screens.kv  screens.py  scroll_list.py  single_word.py  tabs.kv  user_input.kv  user_input.py
my_logger/: log.py
pt_core_news_sm-2.2.5/: PKG-INFO  meta.json
pt_core_news_sm-2.2.5/pt_core_news_sm.egg-info/: PKG-INFO  SOURCES.txt
screenshots/recordings/: 1-word-0.kvi  2-word-1.kvi  3-word-images.kvi  4-import.kvi  5-export.kvi
src/: ankicardgen.ini  db.py  fields.py  generate_anki_card.py  main.py  parsers.py  paths.py  pyinstaller-linux.spec  pyinstaller-windows.spec  templates.py  utils.py  words.py
src/anki/: meaning-pt_back.html  meaning-pt_front.html  pt-meaning_back.html  pt-meaning_front.html
src/custom_widgets/: behaviors.py  dialogs.py  fixes.kv  main_menu.kv  main_menu.py  scroll_widgets.kv  scroll_widgets.py  selection_widgets.kv  selection_widgets.py
src/google_images_download/: __init__.py  google_images_download.py
src/my_kivy/: behaviors.py  dialogs.kv  dialogs.py  fixes.kv  main_menu.kv  main_menu.py  mychooser.kv  mychooser.py  screen_queue.kv  screen_queue.py  screen_single_word.kv  screen_single_word.py  scroll_list.kv  scroll_list.py  scroll_widgets.kv  scroll_widgets.py  selection_widgets.kv  selection_widgets.py
src/screens/: history.kv  history.py  queued.kv  queued.py  settings.kv  settings.py  single_word.kv  single_word.py
test/: motion_recorder.py  mychooser.kv  mychooser.py
word_requests/: dictionary_queries.py  parser.py  parsers.py  pt_word.py  urls_and_parsers.py  word.py  words.py
(+297 files in other folders)
