[tool.poetry]
name = "acg"
version = "1.0.11"
description = "Kivy application to generate flash cards for Anki."
authors = ["David Fischer <d.fischer.git@posteo.de>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/david-fischer/Anki_CardGen"
keywords = ["kivy, anki, flash cards, languages, portuguese, learning"]
packages = [{ include = "acg" }]


[tool.poetry.dependencies]
python = "^3.8"
appdirs = "^1.4.4"
click = "^7.1.2"
pyfzf = "^0.2.2"
titlecase = "^1.1.1"
attrs = "^20.3.0"
beautifulsoup4 = "^4.9.3"
bidict = "^0.21.2"
certifi = "^2020.12.5"
genanki = "^0.10.1"
kivymd = "^0.104.1"
googletrans = "^3.0.0"
Kivy = "^2.0.0"
lxml = "^4.6.2"
pandas = "^1.1.5"
Pillow = "^8.0.1"
pony = "^0.7.14"
requests = "^2.25.1"
spacy = "^2.3.5"
toolz = "^0.11.1"
Unidecode = "^1.1.2"

[tool.poetry.dev-dependencies]
Jinja2 = "^2.11.2"
pylint = "^2.6.0"
black = "^20.8b1"
pre-commit = "^2.9.2"
toml = "^0.10.2"

[tool.poetry.scripts]
acg = "acg.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

#LINTERS ETC

[tool.pylint.messages_control]
disable = [
    "C0330, C0326", #black compatibility
    "import-error,no-name-in-module,no-member", #compatibility with pre-commit-hook in pycharm
    "fixme"
]
good-names = ["i,j,k,v,x,y,id,_,d,bs"]
min-public-methods = 0
defining-attr-methods =["__init__","__new__","setUp","__post_init__","__attrs_post_init__"]

[tool.pylint.similarities]
ignore-imports=true

[tool.pylint.format]
max-line-length = "120" #increased

[tool.isort]
profile = "black"
